# eGon-validation

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  count_all_rows.py  list_scenario_validations.py  pyproject.toml  run_validation.sh  test_local.py  test_parallel.py
dev/: debug_with_trunnel.py
docs/: cli.md  custom-rules.md  index.md  installation.md  pipeline-integration.md  rules.md
egon_validation/: __init__.py  cli.py  config.py  context.py  db.py  exceptions.py  logging_config.py  permissions.py  retry.py  retry_utils.py  ssh_tunnel.py
egon_validation.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
egon_validation/report/: generate.py
egon_validation/report/assets/: report.css  report.html  report.js
egon_validation/rules/: __init__.py  base.py  custom.py  formal.py  registry.py
egon_validation/rules/custom/: __init__.py  numeric_aggregation_check.py  row_count_comparison.py
egon_validation/rules/custom/sanity/: cts_electricity_demand_share.py  cts_heat_demand_share.py  dsm_sanity_check.py  emobility_sanity.py  etrago_electricity_sanity.py  etrago_heat_sanity.py  gas_de_sanity.py  home_batteries_sanity.py  pv_rooftop_buildings_sanity.py  residential_electricity_sum.py
egon_validation/rules/formal/: __init__.py  array_cardinality_check.py  balance_check.py  data_type_check.py  geometry_check.py  null_check.py  numeric_aggregation_check.py  range_check.py  referential_integrity_check.py  row_count_check.py  srid_check.py  time_series_check.py  value_set_check.py
egon_validation/rules/sanity/: __init__.py  cts_electricity_demand_share.py  cts_heat_demand_share.py  dsm_sanity_check.py  emobility_sanity.py  etrago_electricity_sanity.py  etrago_heat_sanity.py  gas_abroad_sanity.py  gas_de_sanity.py  home_batteries_sanity.py  pv_rooftop_buildings_sanity.py  residential_electricity_hh_refinement.py  residential_electricity_sum.py
egon_validation/runner/: aggregate.py  coverage_analysis.py  execute.py
egon_validation/utils/: __init__.py  gas_data.py
examples/: README.md  airflow_integration.py  basic_usage.py  custom_rule_example.py  dataframe_usage.py
tests/: __init__.py  conftest.py  test_base.py  test_custom_rules.py  test_formal_rules.py  test_registry.py
tests/rules/: __init__.py  test_base.py  test_registry.py
tests/rules/custom/: __init__.py  test_disaggregated_demand_sum.py  test_electrical_load_aggregation.py
tests/rules/formal/: __init__.py  test_array_cardinality_check.py  test_data_type_check.py  test_geometry_check.py  test_null_check.py  test_referential_integrity_check.py  test_row_count_check.py  test_srid_check.py  test_value_set_check.py
tests/runner/: __init__.py  test_coverage_analysis.py
validation_runs/adhoc-20250810T214100/final/: coverage.json  report.css  report.html  report.js  results.json
validation_runs/adhoc-20250810T214100/tasks/adhoc/: results.jsonl
validation_runs/validation-test-20250924T093242/final/: report.css  report.html  report.js  results.json
validation_runs/validation-test-20251103T112256/final/: coverage.json  report.html  results.json
validation_runs/validation-test-20251103T112256/tasks/: db_metadata.json
validation_runs/validation-test-20251125T145021/final/: coverage.json  report.css  report.html  results.json
(+2 files in other folders)
