[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "egon-validation"
version = "0.1.0"
description = "Validation library for eGon data pipeline (rules hard-coded, SQL-first, Airflow-friendly)"
readme = "README.md"
requires-python = ">=3.8,<3.9"
license = {text = "AGPL-3.0-only"}
author = [{name="sagemaso", email="sarah.sommer@rl-institut.de"}]
dependencies = [
    "SQLAlchemy>=1.4,<3",
    "psycopg2-binary>=2.9",
    "pandas>=2.0,<2.2",
    "pyarrow>=16", 
    "geopandas>=0.13,<0.14",
    "shapely>=2",
    "geoalchemy2>=0.14"
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-mock>=3.0"
]

[tool.setuptools.packages.find]
include = ["egon_validation*"]

[project.scripts]
egon-validation = "egon_validation.cli:main"
